; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_dirhash.c_get_entry_by_normname.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_dirhash.c_get_entry_by_normname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.target_dir_entry = type { %struct.target_dir_entry*, i32 }
%struct.target_dir_hash = type { %struct.target_dir_entry** }

@NUM_DIR_HASH_BUCKETS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.target_dir_entry* (%struct.target_dir_hash*, i8*)* @get_entry_by_normname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.target_dir_entry* @get_entry_by_normname(%struct.target_dir_hash* %0, i8* %1) #0 {
  %3 = alloca %struct.target_dir_hash*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.target_dir_entry*, align 8
  store %struct.target_dir_hash* %0, %struct.target_dir_hash** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @djb_hash(i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.target_dir_hash*, %struct.target_dir_hash** %3, align 8
  %10 = getelementptr inbounds %struct.target_dir_hash, %struct.target_dir_hash* %9, i32 0, i32 0
  %11 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @NUM_DIR_HASH_BUCKETS, align 4
  %14 = urem i32 %12, %13
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds %struct.target_dir_entry*, %struct.target_dir_entry** %11, i64 %15
  %17 = load %struct.target_dir_entry*, %struct.target_dir_entry** %16, align 8
  store %struct.target_dir_entry* %17, %struct.target_dir_entry** %6, align 8
  br label %18

18:                                               ; preds = %30, %2
  %19 = load %struct.target_dir_entry*, %struct.target_dir_entry** %6, align 8
  %20 = icmp ne %struct.target_dir_entry* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %18
  %22 = load %struct.target_dir_entry*, %struct.target_dir_entry** %6, align 8
  %23 = getelementptr inbounds %struct.target_dir_entry, %struct.target_dir_entry* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i64 @strcmp(i32 %24, i8* %25)
  %27 = icmp ne i64 %26, 0
  br label %28

28:                                               ; preds = %21, %18
  %29 = phi i1 [ false, %18 ], [ %27, %21 ]
  br i1 %29, label %30, label %34

30:                                               ; preds = %28
  %31 = load %struct.target_dir_entry*, %struct.target_dir_entry** %6, align 8
  %32 = getelementptr inbounds %struct.target_dir_entry, %struct.target_dir_entry* %31, i32 0, i32 0
  %33 = load %struct.target_dir_entry*, %struct.target_dir_entry** %32, align 8
  store %struct.target_dir_entry* %33, %struct.target_dir_entry** %6, align 8
  br label %18

34:                                               ; preds = %28
  %35 = load %struct.target_dir_entry*, %struct.target_dir_entry** %6, align 8
  ret %struct.target_dir_entry* %35
}

declare dso_local i32 @djb_hash(i8*) #1

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
